Sun May 15 10:57:26 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_get_ev_const): warn deprecated constant even
	  in the class context.  [ruby-core:75505] [Bug #12382]

Sun May 15 03:13:01 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* iseq.h (struct iseq_compile_data): use struct rb_id_table
	  instead of st_table.

	* iseq.c (prepare_iseq_build): don't allocate ivar_cache_table
	  until it has at least one element.

	* iseq.c (compile_data_free): free ivar_cache_table only if it
	  is allocated.

	* compile.c (get_ivar_ic_value): allocate if the table is not
	  allocated yet.

Sat May 14 09:04:34 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (pkg_config): use xsystem consistently to set up
	  library path environment variable as well as latter pkg-config
	  calls.  [ruby-dev:49619] [Bug #12379]

Sat May 14 00:16:54 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (make_seed_value): append leading-zero-guard and get
	  rid of making a local copy of the seed.

Fri May 13 08:46:42 2016  cremno  <cremno@mail.ru>

	* NEWS: drop FreeBSD < 4 support.  [Fix GH-1339]
	  The most recent version affected by this is 3.5 and was released
	  in 2000.
	  https://www.freebsd.org/releases/3.5R/announce.html
	  https://en.wikipedia.org/wiki/History_of_FreeBSD#Version_history

Fri May 13 03:12:09 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/defines.h (GCC_VERSION_SINCE): moved from internal.h.

Fri May 13 03:11:20 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (__builtin_constant_p): check.

	* internal.h: Use HAVE_BUILTIN___BUILTIN_CONSTANT_P

Fri May 13 03:10:39 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: use alternative keyword
	  to avoid macros conflicts with them.

Thu May 12 01:54:08 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (try_func): get rid of conflict of declarations of
	  main().  checking local symbol reference does not make sense.
