@@ -1,3 +1,9 @@
+Sun May 15 14:07:40 2016  Kazuki Yamaguchi  <k@rhe.jp>
+
+	* ext/openssl/lib/openssl/bn.rb (inspect): Added.
+
+	* ext/openssl/lib/openssl/x509.rb (X509::Name#inspect): Added.
+
 Sun May 15 10:57:26 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* vm_insnhelper.c (vm_get_ev_const): warn deprecated constant even
